# 8ms-esp32

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/lvgl_gui/: CMakeLists.txt  Kconfig  lv_conf.h
components/screen/: CMakeLists.txt
components/touch_panel/: CMakeLists.txt
main/: CMakeLists.txt  ali_font_105.c  ali_font_22.c  ali_font_24.c  ali_font_28.c  ali_font_30.c  ali_font_32.c  ali_font_34.c  ali_font_36.c  ali_font_40.c  ali_font_48.c  main.c  qm_ui_entry.c  qm_ui_entry.h
